Timesheet PDF missing border bugfix (#6154)
Each table does now have a border at the bottom, even
if an employee left during the month or it ends with
a weekend.

The tr:last-child class that adds the bottom border is not
recognized by the TCPDF library, a new class is added in
case of pdf exports.

--- a/src/Opit/OpitHrm/LeaveBundle/Resources/public/css/timeSheetPrintView.scss
+++ b/src/Opit/OpitHrm/LeaveBundle/Resources/public/css/timeSheetPrintView.scss
@@ -39,6 +39,11 @@ table{
     border:solid 1px black;
 }
 
+/* Required for TCPDF html rendering, tr:last-child not recognoized */
+.border-bottom-solid-1-black{
+     border-bottom:solid 1px black;
+}
+
 .border-right-3-black{
     border-right: solid 3px black;
 }
